[package]
name = "git-sync"
version = "0.1.0"
authors = ["Olivier Lischer <olivier.lischer@liolin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.0"
log = "0.4"
env_logger = "0.8"
clap = "2.33"
thiserror = "1.0"
